update game background

--- a/public/runner/index.html
+++ b/public/runner/index.html
@@ -2217,6 +2217,11 @@
       display: none;
     }
 
+    html {
+      background: #f3e29b;
+    overflow: hidden;
+    }
+
     #diagnose-button {
       -webkit-margin-start: 0;
       float: none;
